# it-tage-ffm-2023-devops

./: .pre-commit-config.yaml  README.md
.github/workflow/: buildAndPushContainer.yml
.github/workflows/: buildAndPushContainer.yml  jhipsterCiCd.yml  simpleCiPipeline.yml
0_devops/: README.md
0_devops/1_theorie/: CiCd.md  Einführung.md  Fortgeschritten.md  IntegrationSec.md
0_devops/2_praxis/ContinuousIntegration/: Inhalte.md
1_security/: README.md
1_security/1_theorie/: Anwendungssicherheit.md  SecurityAutomatisierung.md  SecurityKultur.md  ÜbersichtSecInDevOps.md
1_security/2_praxis/: README.md
1_security/2_praxis/security-testing-demos/: README.md  pom.xml
1_security/2_praxis/security-testing-demos/zap/: zap-api-scan.sh  zap-baseline-scan.sh  zap-full-scan.sh
2_supplychain/: README.md
2_supplychain/1_theorie/: Container.md  Dockerfiles.md  RechtUndCompliance.md  SicherheitSupplyChain.md  Übersicht.md
2_supplychain/2_praxis/DemoApplication/app/: README.md  package-lock.json  package.json  pom.xml  (+1 more)
2_supplychain/2_praxis/SBOMDemos/: README.md  industrie_maschine_sbom.json
99_assets/excalidraw/: CI-CD-Supplychain-v2.excalidraw  CI-CD-Supplychain.excalidraw  CICD.excalidraw  DevOpsHistroy.excalidraw  container-vs-vm.excalidraw  threeWaysOfDevOps.excalidraw
devops/: devops.md
supplychain/application/: .yo-rc.json  README.md  angular.json  application.md  package.json  pom.xml
supplychain/application/webpack/: webpack.custom.js
supplychain/container/: Dockerfile  container.md
supplychain/dependencies/examples/python/: pyproject.toml
(+319 files in other folders)
