[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
cyclonedx-bom = "^3.11.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
